# cargo_public_crate_template

./: .gitignore  Cargo.toml  OricaLicense.md  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
