[package]
name = "cargo_crate_template"
version = "0.1.0"
edition = "2021"
description = "Library to access the Orica SLED database"
license-file = "OricaLicense.md"
repository = "https://github.com/ForesightMiningSoftwareCorporation/cargo_crate_template.git"
publish = ["foresight-mining-software-corporation"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[features]
